--- a/51/index.html
+++ b/51/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" id="id" placeholder="ID">
-    <input type="text" id="name" placeholder="Name">
-    <input type="text" id="kiekis" placeholder="Amount">
+    <input type="text" id="id" placeholder="ID" required>
+    <input type="text" id="name" placeholder="Name" required>
+    <input type="text" id="kiekis" placeholder="Amount" required>
     <button class="create">Create</button>
 
     <table id="data-table">
